--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nixie+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chilanka&display=swap');
 html {
   box-sizing: border-box;
 }
@@ -6,5 +6,14 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Nixie One', sans-serif;
+  font-family: 'Chilanka', sans-serif;
+  background-color: whitesmoke;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  letter-spacing: 5px;
 }
